--- a/multipage_website/css/style.css
+++ b/multipage_website/css/style.css
@@ -1,15 +1,26 @@
 body{
     background-color: rgb(162, 162, 219);
-    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 h3,h4 {
-    color:rgb(26, 109, 182)
+    color:rgb(26, 109, 182);
 }
 .container{
-    width:1000px;
+    width:800px;
     border: 1px solid rgb(0, 0, 0);
     margin: 0 auto;
     padding: 50px;
-    background-color: rgb(247, 157, 66);
+    background-color: rgb(161, 93, 217);
+}
+.nav{
+    list-style: none;
+    text-align: center;
+}
+.nav li{
+    display: inline;
+    margin-right: 75px;
+}
+h1,h2{
+    text-align: center;
 }
